--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <nav class="navbar navbar-expand-lg bg-dark sticky-top border-bottom border-warning-subtle">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#/inicio"><img src="/public/images/logovitrine.png"
-                            class="logomenu" alt="Logo Vitrine dos links"></a>
+            <a class="navbar-brand fw-bold" href="#/inicio"><img src="/public/images/logovitrine.png" class="logomenu"
+                    alt="Logo Vitrine dos links"></a>
 
             <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -104,8 +104,8 @@
                                     target="_blank">Camisas <i class="bi bi-amazon"></i></a></li>
                         </ul>
                     </li> -->
-                    
-                    
+
+
                     <li class="nav-item">
                         <a class="nav-link" href="glow.html" target="_blank"><i class="bi bi-star-fill"></i> <img
                                 src="/public/images/Logo Horizontal Branco.png" class="logoglow" alt="Logo Glow Corps"
@@ -224,17 +224,8 @@
         <!-- CATEGORIAS (UI) -->
 
         <!-- AQUI VAI ENTRAR O CONTEÚDO DO SPA DEPOIS -->
+         <hr class="gc-divider" />
         <section id="spa-view">
-            <section data-type="mais-vendidos" data-limit="10"></section>
-            <hr class="gc-divider" />
-            <section data-main="suplementos" data-sub="whey" data-limit="5">
-            </section>
-            <hr class="gc-divider" />
-            <section data-main="suplementos" data-sub="creatina">
-            </section>
-            <hr class="gc-divider" />
-            <section data-main="suplementos" data-sub="pre-treino" data-label="Pré-treino">
-            </section>
             <hr class="gc-divider" />
         </section>
 
