add category / route / some APIs

--- a/glow.html
+++ b/glow.html
@@ -45,10 +45,12 @@
         <div class="container">
             <a class="navbar-brand fw-bold" href="index.html"><img src="/public/images/logovitrine.png" class="logomenu"
                     alt="Logo Vitrine dos links"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+
+            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+                <a class="navbar-brand fw-bold" href="#/inicio"><img src="/public/images/logovitrine.png"
+                            class="logomenu" alt="Logo Vitrine dos links"></a>
+            </button> -->
 
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto align-items-center">
@@ -103,21 +105,26 @@
                         </ul>
                     </li> -->
 
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#" target="_blank"><i class="bi bi-star-fill"></i> Produtos Glow</a>
-                    </li> -->
-                    <li class="nav-item ms-lg-2 mt-2 mt-lg-0">
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="glow.html" target="_blank"><i class="bi bi-star-fill"></i> <img
+                                src="/public/images/Logo Horizontal Branco.png" class="logoglow" alt="Logo Glow Corps"
+                                sizes="" srcset=""></a>
+                    </li>
+
+                    <!-- <li class="nav-item ms-lg-2 mt-2 mt-lg-0">
                         <a class="btn btn-warning btn-sm fw-bold"
                             href="https://www.amazon.com.br/shop/caiojosef?ref=ac_inf_tb_vh" target="_blank"><i
                                 class="bi bi-cart-fill"></i> Ofertas Amazon</a>
                     <li class="nav-item ms-lg-2 mt-2 mt-lg-0">
                         <a class="btn btn-warning btn-sm fw-bold" href="https://mercadolivre.com/sec/16oBFtK"
                             target="_blank"><i class="bi bi-cart-fill"></i> Ofertas Mercado Livre</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
         </div>
     </nav>
+    
 
     <!-- <header class="hero text-center">
         <div class="container">
@@ -320,11 +327,10 @@
                                 <!-- <div class="gc-offer-price">R$ 279,80</div> -->
                             </div>
 
-                             <a class="btn btn-warning btn-sm fw-bold"
-                                href="https://ticto.link/to/PE4145?pid=AF6C470729" target="_blank"
-                                rel="noopener">
+                            <a class="btn btn-warning btn-sm fw-bold" href="https://ticto.link/to/PE4145?pid=AF6C470729"
+                                target="_blank" rel="noopener">
                                 Visitar Site
-                            </a> 
+                            </a>
                         </div>
 
                         <!-- <label class="gc-label">Link</label>
@@ -399,7 +405,11 @@
         </div>
     </footer>
 
+    <script src="public/components/menu/menu.js"></script>
+    <script src="/public/components/card/card.js"></script>
     <script src="spa.js"></script>
+    <script src="/public/assets/js/scripts.js"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
