--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
         </div>
     </nav>
     <menu data-name="Tela Inicial" href="#/inicio" icon-img="/public/images/icons/house-door-fill.svg"></menu>
-    <menu data-name="Mais Vendidos" href="#/maisvendidos" icon-img="/public/images/icons/Crown.svg"></menu>
+    <menu data-name="Mais Vendidos" href="#/mais-vendidos" icon-img="/public/images/icons/Crown.svg"></menu>
+    <menu data-name="Frete Gratis" href="#/frete-gratis" icon-img="/public/images/icons/free-travel.svg"></menu>
     <menu data-name="Suplementos" href="#/suplementos" icon-img="/public/images/icons/capsule-pill.svg"></menu>
     <menu data-name="Ofertas Amazon" href="https://www.amazon.com.br/shop/caiojosef?ref=ac_inf_tb_vh"
         icon-img="/public/images/icons/cart-fill.svg"></menu>
@@ -224,9 +225,9 @@
         <!-- CATEGORIAS (UI) -->
 
         <!-- AQUI VAI ENTRAR O CONTEÚDO DO SPA DEPOIS -->
-         <hr class="gc-divider" />
+        
         <section id="spa-view">
-            <hr class="gc-divider" />
+
         </section>
 
     </main>
@@ -241,9 +242,10 @@
             </div>
         </div>
     </footer>
+    <script src="public/components/category-tabs/category-tabs.js"></script>
     <script src="public/components/menu/menu.js"></script>
     <script src="/public/components/card/card.js"></script>
-    <script src="spa.js"></script>
+    <script type="module" src="public/spa/app.js"></script>
     <script src="/public/assets/js/scripts.js"></script>
 
 
