--- a/public/pages/inicio/index.html
+++ b/public/pages/inicio/index.html
@@ -1,6 +1,9 @@
 <section data-type="mais-vendidos" data-limit="5"></section>
 <hr class="gc-divider" />
 
+<section data-type="frete-gratis" data-limit="5"></section>
+<hr class="gc-divider" />
+
 <section data-main="suplementos" data-sub="whey" data-limit="5"></section>
 <hr class="gc-divider" />
 
