--- a/public/pages/suplementos/index.html
+++ b/public/pages/suplementos/index.html
@@ -1,8 +1,13 @@
-<section data-main="suplementos" data-sub="whey" data-limit="50"></section>
-<hr class="gc-divider" />
+  <hr class="gc-divider" />
+  <section data-main="suplementos" data-sub="whey" data-limit="10"></section>
+  <hr class="gc-divider" />
 
-<section data-main="suplementos" data-sub="creatina" data-limit="50"></section>
-<hr class="gc-divider" />
+  <section data-main="suplementos" data-sub="creatina" data-limit="10"></section>
+  <hr class="gc-divider" />
 
-<section data-main="suplementos" data-sub="pre-treino" data-limit="50"></section>
-<hr class="gc-divider" />
+  <section data-main="suplementos" data-sub="pre-treino" data-label="Pré-treino" data-limit="10"></section>
+  <hr class="gc-divider" />
+
+  
+  
+
