--- a/public/pages/inicio/index.html
+++ b/public/pages/inicio/index.html
@@ -4,11 +4,11 @@
 <section data-type="frete-gratis" data-limit="5"></section>
 <hr class="gc-divider" />
 
-<section data-main="suplementos" data-sub="whey" data-limit="5"></section>
+<!-- <section data-main="suplementos" data-sub="whey" data-limit="5"></section>
 <hr class="gc-divider" />
 
 <section data-main="suplementos" data-sub="creatina"></section>
 <hr class="gc-divider" />
 
 <section data-main="suplementos" data-sub="pre-treino" data-label="Pré-treino"></section>
-<hr class="gc-divider" />
+<hr class="gc-divider" /> -->
