add some archives / new hero section

--- a/glow.html
+++ b/glow.html
@@ -17,6 +17,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap"
         rel="stylesheet">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8625122685851764"
+        crossorigin="anonymous"></script>
 
     <meta name="facebook-domain-verification" content="8fjq9b3efvuzplerh1jzuvk1p6xo2x" />
     <script>
@@ -124,7 +126,7 @@
             </div>
         </div>
     </nav>
-    
+
 
     <!-- <header class="hero text-center">
         <div class="container">
