--- a/public/pages/maisvendidos/index.html
+++ b/public/pages/maisvendidos/index.html
@@ -1,3 +1,5 @@
 <hr class="gc-divider" />
-<section data-type="mais-vendidos" data-limit="50"></section>
+<section data-api="https://vitrinedoslinks.com.br/app/api/listar-mais-vendidos.php" data-limit="100"
+    data-label="MAIS VENDIDOS" data-link="">
+</section>
 <hr class="gc-divider" />
