add open categories in menu

--- a/index.html
+++ b/index.html
@@ -262,7 +262,10 @@
     <main class="container my-4">
 
         
-  <section id="spa-view"></section>
+  <section id="spa-view">
+
+    
+  </section>
 
 
 
